sandbox/geos/fp_geos_c.h


typedef struct GEOSGeom_t GEOSGeometry;
typedef struct GEOSCoordSeq_t GEOSCoordSequence;
typedef struct GEOSBufParams_t GEOSBufferParams;
typedef struct GEOSMakeValidParams_t GEOSMakeValidParams;
typedef int (*GEOSTransformXYCallback)(
    double* x,
    double* y,
    void* userdata);
typedef void (GEOSInterruptCallback)(void);
enum GEOSMakeValidMethods {
    GEOS_MAKE_VALID_LINEWORK = 0,
    GEOS_MAKE_VALID_STRUCTURE = 1
};
extern char  GEOSisSimple(const GEOSGeometry* g);
extern char  GEOSisValid(const GEOSGeometry* g);
extern char  *GEOSisValidReason(const GEOSGeometry *g);
extern char  GEOSisValidDetail(
    const GEOSGeometry* g,
    int flags,
    char** reason,
    GEOSGeometry** location);
extern GEOSGeometry  *GEOSMakeValid(
    const GEOSGeometry* g);
extern GEOSGeometry  *GEOSMakeValidWithParams(
    const GEOSGeometry* g,
    const GEOSMakeValidParams *makeValidParams);
extern GEOSMakeValidParams  *GEOSMakeValidParams_create(void);
extern void  GEOSMakeValidParams_destroy(GEOSMakeValidParams* parms);
extern int  GEOSMakeValidParams_setMethod(
    GEOSMakeValidParams* p,
    enum GEOSMakeValidMethods method);
extern int  GEOSMakeValidParams_setKeepCollapsed(
    GEOSMakeValidParams* p,
    int keepCollapsed);
extern int  GEOSMinimumClearance(const GEOSGeometry* g, double* d);
extern GEOSGeometry  *GEOSMinimumClearanceLine(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSRemoveRepeatedPoints(
    const GEOSGeometry* g,
    double tolerance);
extern int  GEOSArea(
    const GEOSGeometry* g,
    double *area);
extern int  GEOSLength(
    const GEOSGeometry* g,
    double *length);
extern int  GEOSGeomGetLength(
    const GEOSGeometry *g,
    double *length);
extern int  GEOSDistance(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double *dist);
extern char  GEOSDistanceWithin(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double dist);
extern int  GEOSDistanceIndexed(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double *dist);
extern GEOSCoordSequence  *GEOSNearestPoints(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
extern int  GEOSHausdorffDistance(
    const GEOSGeometry *g1,
    const GEOSGeometry *g2,
    double *dist);
extern int  GEOSHausdorffDistanceDensify(
    const GEOSGeometry *g1,
    const GEOSGeometry *g2,
    double densifyFrac,
    double *dist);
extern int  GEOSFrechetDistance(
    const GEOSGeometry *g1,
    const GEOSGeometry *g2,
    double *dist);
extern int  GEOSFrechetDistanceDensify(
    const GEOSGeometry *g1,
    const GEOSGeometry *g2,
    double densifyFrac,
    double *dist);
extern double  GEOSProject(const GEOSGeometry* line,
                                   const GEOSGeometry* point);
extern GEOSGeometry  *GEOSInterpolate(const GEOSGeometry* line,
                                              double d);
extern double  GEOSProjectNormalized(const GEOSGeometry* line,
                                             const GEOSGeometry* point);
extern GEOSGeometry  *GEOSInterpolateNormalized(
    const GEOSGeometry *line,
    double proportion);
extern GEOSGeometry  *GEOSIntersection(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern GEOSGeometry  *GEOSIntersectionPrec(const GEOSGeometry* g1, const GEOSGeometry* g2, double gridSize);
extern GEOSGeometry  *GEOSDifference(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb);
extern GEOSGeometry  *GEOSDifferencePrec(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb,
    double gridSize);
extern GEOSGeometry  *GEOSSymDifference(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb);
extern GEOSGeometry  *GEOSSymDifferencePrec(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb,
    double gridSize);
extern GEOSGeometry  *GEOSUnion(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb);
extern GEOSGeometry  *GEOSUnionPrec(
    const GEOSGeometry* ga,
    const GEOSGeometry* gb,
    double gridSize);
extern GEOSGeometry  *GEOSUnaryUnion(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSUnaryUnionPrec(
    const GEOSGeometry* g,
    double gridSize);
extern GEOSGeometry  *GEOSDisjointSubsetUnion(const GEOSGeometry *g);
extern GEOSGeometry  *GEOSClipByRect(
    const GEOSGeometry* g,
    double xmin, double ymin,
    double xmax, double ymax);
extern GEOSGeometry  *GEOSSharedPaths(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
extern GEOSGeometry  *GEOSBuffer(const GEOSGeometry* g,
    double width, int quadsegs);
extern GEOSBufferParams  *GEOSBufferParams_create(void);
extern void  GEOSBufferParams_destroy(GEOSBufferParams* parms);
extern int  GEOSBufferParams_setEndCapStyle(
    GEOSBufferParams* p,
    int style);
extern int  GEOSBufferParams_setJoinStyle(
    GEOSBufferParams* p,
    int joinStyle);
extern int  GEOSBufferParams_setMitreLimit(
    GEOSBufferParams* p,
    double mitreLimit);
extern int  GEOSBufferParams_setQuadrantSegments(
    GEOSBufferParams* p,
    int quadSegs);
extern int  GEOSBufferParams_setSingleSided(
    GEOSBufferParams* p,
    int singleSided);
extern GEOSGeometry  *GEOSBufferWithParams(
    const GEOSGeometry* g,
    const GEOSBufferParams* p,
    double width);
extern GEOSGeometry  *GEOSBufferWithStyle(
    const GEOSGeometry* g,
    double width,
    int quadsegs,
    int endCapStyle,
    int joinStyle,
    double mitreLimit);
extern GEOSGeometry  *GEOSOffsetCurve(const GEOSGeometry* g,
    double width, int quadsegs, int joinStyle, double mitreLimit);
extern GEOSGeometry  *GEOSCoverageUnion(const GEOSGeometry *g);
extern int  GEOSCoverageIsValid(
    const GEOSGeometry* input,
    double gapWidth,
    GEOSGeometry** invalidEdges);
extern GEOSGeometry  * GEOSCoverageSimplifyVW(
    const GEOSGeometry* input,
    double tolerance,
    int preserveBoundary);
extern GEOSGeometry  *GEOSEnvelope(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSBoundary(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSConvexHull(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSConcaveHull(
    const GEOSGeometry* g,
    double ratio,
    unsigned int allowHoles);
extern GEOSGeometry  *GEOSConcaveHullByLength(
    const GEOSGeometry* g,
    double length,
    unsigned int allowHoles);
extern GEOSGeometry  *GEOSConcaveHullOfPolygons(
    const GEOSGeometry* g,
    double lengthRatio,
    unsigned int isTight,
    unsigned int isHolesAllowed);
extern GEOSGeometry  *GEOSPolygonHullSimplify(
    const GEOSGeometry* g,
    unsigned int isOuter,
    double vertexNumFraction);
enum GEOSPolygonHullParameterModes {
    GEOSHULL_PARAM_VERTEX_RATIO = 1,
    GEOSHULL_PARAM_AREA_RATIO = 2
};
extern GEOSGeometry  *GEOSPolygonHullSimplifyMode(
    const GEOSGeometry* g,
    unsigned int isOuter,
    unsigned int parameterMode,
    double parameter);
extern GEOSGeometry  *GEOSMinimumRotatedRectangle(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSMaximumInscribedCircle(
    const GEOSGeometry* g,
    double tolerance);
extern GEOSGeometry  *GEOSLargestEmptyCircle(
    const GEOSGeometry* obstacles,
    const GEOSGeometry* boundary,
    double tolerance);
extern GEOSGeometry  *GEOSMinimumWidth(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSPointOnSurface(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSGetCentroid(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSMinimumBoundingCircle(
    const GEOSGeometry* g,
    double* radius,
    GEOSGeometry** center);
extern GEOSGeometry  * GEOSDelaunayTriangulation(
    const GEOSGeometry *g,
    double tolerance,
    int onlyEdges);
extern GEOSGeometry  * GEOSConstrainedDelaunayTriangulation(
    const GEOSGeometry *g);
enum GEOSVoronoiFlags
{
    GEOS_VORONOI_ONLY_EDGES = 1,
    GEOS_VORONOI_PRESERVE_ORDER = 2
};
extern GEOSGeometry  * GEOSVoronoiDiagram(
    const GEOSGeometry *g,
    const GEOSGeometry *env,
    double tolerance,
    int flags);
extern GEOSGeometry  *GEOSNode(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSPolygonize(
    const GEOSGeometry * const geoms[],
    unsigned int ngeoms);
extern GEOSGeometry  *GEOSPolygonize_valid(
    const GEOSGeometry * const geoms[],
    unsigned int ngeoms);
extern GEOSGeometry  *GEOSPolygonizer_getCutEdges(
    const GEOSGeometry * const geoms[],
    unsigned int ngeoms);
extern GEOSGeometry  *GEOSPolygonize_full(
    const GEOSGeometry* input,
    GEOSGeometry** cuts,
    GEOSGeometry** dangles,
    GEOSGeometry** invalid);
extern GEOSGeometry  *GEOSBuildArea(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSDensify(
    const GEOSGeometry* g,
    double tolerance);
extern GEOSGeometry  *GEOSLineMerge(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSLineMergeDirected(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSLineSubstring(
        const GEOSGeometry* g,
        double start_fraction,
        double end_fraction);
extern GEOSGeometry  *GEOSReverse(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSSimplify(
    const GEOSGeometry* g,
    double tolerance);
extern GEOSGeometry  *GEOSTopologyPreserveSimplify(
    const GEOSGeometry* g,
    double tolerance);
extern GEOSGeometry  *GEOSGeom_extractUniquePoints(
    const GEOSGeometry* g);
extern int  GEOSHilbertCode(
    const GEOSGeometry *geom,
    const GEOSGeometry* extent,
    unsigned int level,
    unsigned int *code
);
extern GEOSGeometry  *GEOSGeom_transformXY(
    const GEOSGeometry* g,
    GEOSTransformXYCallback callback,
    void* userdata);
extern GEOSGeometry  *GEOSSnap(
    const GEOSGeometry* input,
    const GEOSGeometry* snap_target,
    double tolerance);
extern GEOSGeometry  *GEOSGeom_setPrecision(
	const GEOSGeometry *g,
    double gridSize,
    int flags);