sandbox/geos/fp_geos_c.pas


function GEOSisSimple(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisValid(g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisValidReason(g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSisValidDetail(g: PGEOSGeometry; flags: longint; reason: PPchar; location: PPGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSMakeValid(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMakeValidWithParams(g: PGEOSGeometry; makeValidParams: PGEOSMakeValidParams): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMakeValidParams_create: PGEOSMakeValidParams; cdecl; external libgeos_c;
procedure GEOSMakeValidParams_destroy(parms: PGEOSMakeValidParams); cdecl; external libgeos_c;
function GEOSMakeValidParams_setMethod(p: PGEOSMakeValidParams; method: TGEOSMakeValidMethods): longint; cdecl; external libgeos_c;
function GEOSMakeValidParams_setKeepCollapsed(p: PGEOSMakeValidParams; keepCollapsed: longint): longint; cdecl; external libgeos_c;
function GEOSMinimumClearance(g: PGEOSGeometry; d: Pdouble): longint; cdecl; external libgeos_c;
function GEOSMinimumClearanceLine(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSRemoveRepeatedPoints(g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSArea(g: PGEOSGeometry; area: Pdouble): longint; cdecl; external libgeos_c;
function GEOSLength(g: PGEOSGeometry; length: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetLength(g: PGEOSGeometry; length: Pdouble): longint; cdecl; external libgeos_c;

function GEOSDistance(g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSDistanceWithin(g1: PGEOSGeometry; g2: PGEOSGeometry; dist: double): char; cdecl; external libgeos_c;
function GEOSDistanceIndexed(g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSNearestPoints(g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSHausdorffDistance(g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSHausdorffDistanceDensify(g1: PGEOSGeometry; g2: PGEOSGeometry; densifyFrac: double; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSFrechetDistance(g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSFrechetDistanceDensify(g1: PGEOSGeometry; g2: PGEOSGeometry; densifyFrac: double; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSProject(line: PGEOSGeometry; point: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSInterpolate(line: PGEOSGeometry; d: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSProjectNormalized(line: PGEOSGeometry; point: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSInterpolateNormalized(line: PGEOSGeometry; proportion: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSIntersection(g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSIntersectionPrec(g1: PGEOSGeometry; g2: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDifference(ga: PGEOSGeometry; gb: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDifferencePrec(ga: PGEOSGeometry; gb: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSymDifference(ga: PGEOSGeometry; gb: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSymDifferencePrec(ga: PGEOSGeometry; gb: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnion(ga: PGEOSGeometry; gb: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnionPrec(ga: PGEOSGeometry; gb: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnaryUnion(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnaryUnionPrec(g: PGEOSGeometry; gridSize: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDisjointSubsetUnion(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSClipByRect(g: PGEOSGeometry; xmin: double; ymin: double; xmax: double; ymax: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSharedPaths(g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSBuffer(g: PGEOSGeometry; width: double; quadsegs: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBufferParams_create: PGEOSBufferParams; cdecl; external libgeos_c;
procedure GEOSBufferParams_destroy(parms: PGEOSBufferParams); cdecl; external libgeos_c;
function GEOSBufferParams_setEndCapStyle(p: PGEOSBufferParams; style: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setJoinStyle(p: PGEOSBufferParams; joinStyle: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setMitreLimit(p: PGEOSBufferParams; mitreLimit: double): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setQuadrantSegments(p: PGEOSBufferParams; quadSegs: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setSingleSided(p: PGEOSBufferParams; singleSided: longint): longint; cdecl; external libgeos_c;
function GEOSBufferWithParams(g: PGEOSGeometry; p: PGEOSBufferParams; width: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBufferWithStyle(g: PGEOSGeometry; width: double; quadsegs: longint; endCapStyle: longint; joinStyle: longint; mitreLimit: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSOffsetCurve(g: PGEOSGeometry; width: double; quadsegs: longint; joinStyle: longint; mitreLimit: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSCoverageUnion(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSCoverageIsValid(input: PGEOSGeometry; gapWidth: double; invalidEdges: PPGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSCoverageSimplifyVW(input: PGEOSGeometry; tolerance: double; preserveBoundary: longint): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSEnvelope(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBoundary(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConvexHull(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHull(g: PGEOSGeometry; ratio: double; allowHoles: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHullByLength(g: PGEOSGeometry; length: double; allowHoles: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConcaveHullOfPolygons(g: PGEOSGeometry; lengthRatio: double; isTight: dword; isHolesAllowed: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonHullSimplify(g: PGEOSGeometry; isOuter: dword; vertexNumFraction: double): PGEOSGeometry; cdecl; external libgeos_c;

type
  TGEOSPolygonHullParameterModes = longint;

const
  GEOSHULL_PARAM_VERTEX_RATIO = 1;
  GEOSHULL_PARAM_AREA_RATIO = 2;

function GEOSPolygonHullSimplifyMode(g: PGEOSGeometry; isOuter: dword; parameterMode: dword; parameter: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumRotatedRectangle(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMaximumInscribedCircle(g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLargestEmptyCircle(obstacles: PGEOSGeometry; boundary: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumWidth(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPointOnSurface(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetCentroid(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMinimumBoundingCircle(g: PGEOSGeometry; radius: Pdouble; center: PPGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDelaunayTriangulation(g: PGEOSGeometry; tolerance: double; onlyEdges: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSConstrainedDelaunayTriangulation(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

type
  TGEOSVoronoiFlags = longint;

const
  GEOS_VORONOI_ONLY_EDGES = 1;
  GEOS_VORONOI_PRESERVE_ORDER = 2;

function GEOSVoronoiDiagram(g: PGEOSGeometry; env: PGEOSGeometry; tolerance: double; flags: longint): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSNode(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize(geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize_valid(geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonizer_getCutEdges(geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSPolygonize_full(input: PGEOSGeometry; cuts: PPGEOSGeometry; dangles: PPGEOSGeometry; invalid: PPGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBuildArea(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSDensify(g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineMerge(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineMergeDirected(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSLineSubstring(g: PGEOSGeometry; start_fraction: double; end_fraction: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSReverse(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSimplify(g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSTopologyPreserveSimplify(g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_extractUniquePoints(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSHilbertCode(geom: PGEOSGeometry; extent: PGEOSGeometry; level: dword; code: Pdword): longint; cdecl; external libgeos_c;
function GEOSGeom_transformXY(g: PGEOSGeometry; callback: TGEOSTransformXYCallback; userdata: pointer): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSnap(input: PGEOSGeometry; snap_target: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_setPrecision(g: PGEOSGeometry; gridSize: double; flags: longint): PGEOSGeometry; cdecl; external libgeos_c;
